# async_cargo_mcp

./: .gitignore  APACHE_LICENSE.txt  Cargo.toml  LICENSE  README.md  README_old.md  SHELL_POOL_GUIDE.md  agent-plan-sync-fix.md  mcp-inspector.sh  product-specification-original.md  product-specification-streamlined.md  product-specification.md  prune-merged-branches.sh  test-mcp.sh  test_async_behavior.rs  test_mcp.sh
.config/: nextest.toml
.github/chatmodes/: Rust Beast Mode.chatmode.md  Rust_Beast_Mode.chatmode.md
.github/workflows/: rust.yml
doc2/: product-specification.md
python/: mcp_echo_server.py
src/: callback_system.rs  cargo_command.rs  cargo_tools.rs  client.rs  command_registry.rs  constants.rs  lib.rs  logging.rs  main.rs  mcp_callback.rs  operation_monitor.rs  shell_pool.rs  terminal_output.rs  test_cargo_tools.rs  test_utils.rs  timestamp.rs  tool_hints.rs
tests/: add_features_test.rs  additional_command_tests.rs  async_audit_wait_outputs.rs  async_build_wait_outputs.rs  async_check_wait_outputs.rs  async_clean_wait_outputs.rs  async_clippy_wait_outputs.rs  async_complete_output_detailed_test.rs  async_doc_wait_outputs.rs  async_fmt_wait_outputs.rs  async_mixed_wait_outputs.rs  async_multi_wait_outputs.rs  async_nextest_wait_outputs.rs  async_operations_test.rs  async_placeholder_output_test.rs  bump_version_test.rs  callback_error_enum_test.rs  cargo_lock_action_enum_test.rs  cargo_tools_tests.rs  cli_timeout_parameter_test.rs  comprehensive_tool_hints_test.rs  convenience_method_elimination_test.rs  dependency_section_enum_test.rs  description_addendum_test.rs  disable_tools_test.rs  empty_operation_ids_test.rs  enhanced_command_args_tests.rs  error_handling_tests.rs  integration_tests.rs  lock_remediation_integration_test.rs  mcp_protocol_integration_test.rs  merge_output_build_failure.rs  mod.rs  new_commands_tests.rs  operation_state_enum_test.rs  progress_update_enum_test.rs  server_enhancements_test.rs  shell_error_enum_test.rs  shell_pool_benchmark.rs  shell_pool_integration_test.rs  (+25 more)
tests/common/: mod.rs  test_project.rs
