[package]
name = "async_cargo_mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "async_cargo_mcp"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1"
axum = "0.8.4"
clap = { version = "4.5", features = ["derive"] }
rmcp = { version = "0.3", features = ["server", "client", "macros", "transport-io", "transport-child-process"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3.7"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }
