[package]
name = "async_cargo_mcp"
version = "0.5.2"
edition = "2024"
description = "The package provides a BLAS source of choice."
authors = ["Paul Houghton <paul.irotta@example.com>"]
#documentation = "https://TODO-ON-RELEASE"
homepage = "https://github.com/paulirotta/async_cargo_mcp.git"
repository = "https://github.com/paulirotta/async_cargo_mcp.git"
readme = "README.md"
categories = ["rust-lang", "cargo", "mcp"]
keywords = ["cargo", "mcp"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "async_cargo_mcp"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89" # Remove this once Stable Rust supports Box<dyn TraitWithAsyncMethods>
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
rmcp = { version = "0.6.3", features = ["server", "client", "macros", "transport-io", "transport-child-process", "elicitation", "schemars"] }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.21.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing-appender = "0.2.3"
directories = "6.0.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
